k8s/was-post.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aform-was-post
  labels:
    app: aform
    tier: was-post
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aform
      tier: was-post
  template:
    metadata:
      labels:
        app: aform
        tier: was-post
    spec:
      containers:
      - name: aform-service-post
        image: chromato99/aform-service-post:latest
        ports:
        - containerPort: 8080
          name: was-post-http
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: aform-was-post
spec:
  ports:
  - name : afom-was-post-port
    port: 8080
    targetPort: was-post-http
  selector:
    app: aform
    tier: was-post
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aform-post-db
  labels:
    app: aform
    tier: post-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aform
      tier: post-db
  template:
    metadata:
      labels:
        app: aform
        tier: post-db
    spec:
      containers:
      - name: aform-post-db
        image: mysql:8
        ports:
        - containerPort: 3306
          name: post-db-mysql
        volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: post-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: aform-post-db
spec:
  ports:
  - name : post-db-port
    port: 3306
    targetPort: post-db-mysql
  selector:
    app: aform
    tier: post-db
---
