k8s/was-survey.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aform-was-survey
  labels:
    app: aform
    tier: was-survey
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aform
      tier: was-survey
  template:
    metadata:
      labels:
        app: aform
        tier: was-survey
    spec:
      containers:
      - name: aform-service-survey
        image: chromato99/aform-service-survey
        imagePullSecrets:
          - name: regcred
        ports:
        - containerPort: 3000
          name: was-survey-http
---
apiVersion: v1
kind: Service
metadata:
  name: aform-was-survey
spec:
  ports:
  - name : afom-was-survey-port
    port: 3000
    targetPort: was-survey-http
  selector:
    app: aform
    tier: was-survey
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aform-survey-db
  labels:
    app: aform
    tier: survey-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aform
      tier: survey-db
  template:
    metadata:
      labels:
        app: aform
        tier: survey-db
    spec:
      containers:
      - name: aform-survey-db
        image: mongo:latest
        ports:
        - containerPort: 27017
          name: survey-db-mongo
---
apiVersion: v1
kind: Service
metadata:
  name: aform-survey-db
spec:
  ports:
  - name : survey-db-port
    port: 27017
    targetPort: survey-db-mongo
  selector:
    app: aform
    tier: survey-db
---
