k8s/was-user.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aform-was-user
  labels:
    app: aform
    tier: was-user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aform
      tier: was-user
  template:
    metadata:
      labels:
        app: aform
        tier: was-user
    spec:
      nodeSelector:
        type: worker
      containers:
      - name: aform-spring-user
        image: aform-spring-user
        ports:
        - containerPort: 8080
          name: was-user-http
---
apiVersion: v1
kind: Service
metadata:
  name: aform-was-user
spec:
  ports:
  - name : afom-was-user-port
    port: 8080
    targetPort: was-user-http
  selector:
    app: aform
    tier: was-user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aform-user-db
  labels:
    app: aform
    tier: user-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aform
      tier: user-db
  template:
    metadata:
      labels:
        app: aform
        tier: user-db
    spec:
      nodeSelector:
        type: worker
      containers:
      - name: aform-spring-user-db
        image: mysql
        ports:
        - containerPort: 3306
          name: user-db-mysql
---
apiVersion: v1
kind: Service
metadata:
  name: aform-user-db
spec:
  ports:
  - name : user-db-port
    port: 3306
    targetPort: user-db-mysql
  selector:
    app: aform
    tier: user-db
---
