k8s/ws-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aform-ws-front
  labels:
    app: aform
    tier: ws-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aform
      tier: ws-front
  template:
    metadata:
      labels:
        app: aform
        tier: ws-front
    spec:
      nodeSelector:
        type: worker
      containers:
      - name: ws-front
        image: chromato99/aform-front-web
        imagePullSecrets:
          - name: regcred
        ports:
        - containerPort: 80
          name: ws-front-http
---
apiVersion: v1
kind: Service
metadata:
  name: aform-ws-front
spec:
  ports:
  - name : ws-front-port
    port: 80
    targetPort: ws-front-http
  selector:
    app: aform
    tier: ws-front
---
